[package]
name = "hiddenparam"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.15"
reqwest = { version = "0.11.2", features = ["socks", "json", "cookies", "rustls-tls", "trust-dns", "gzip"] }
regex = "1.3.7"
percent-encoding = "2.1.0"
lazy_static = "1.4.0"
clap = "2.33.1"
rand = "0.5.0"
colored = "2"
diffs = "0.2.1"
url = "2.1.1"
parking_lot = "0.11"